# bus_tickets_service

./: .env.dist  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_09_05_add_cities_table.py  2025_09_10_add_buses_table.py  2025_09_16_add_trips_table.py
app/: db.py  main.py
app/api/buses/: routes.py
app/api/cities/: routes.py
app/api/trips/: routes.py
app/core/: config.py  db.py  lifespan.py
app/crud/: bus.py  city.py  trip.py
app/models/: __init__.py  bus.py  city.py  trip.py
app/schemas/: bus.py  city.py  trip.py
app/services/: s3_service.py
tests/: conftest.py  dependencies.py  test_bus.py  test_city.py  test_healthcheck.py
